--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: farr
-Title: What the Package Does (One Line, Title Case)
+Title: Data and Code for Financial Accounting Research
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Ian",
+           family = "Gow",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "iandgow@gmail.com",
+           comment = c(ORCID = "0000-0002-6243-8409"))
+Description: This package provides handy functions and data to support the book "Accounting Research: An Introductory Course", which is the course book for Financial Accounting Research.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    dbplyr,
+    dplyr
