--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(df_to_pg)
 export(get_annc_dates)
 export(get_event_cum_rets)
 export(get_event_dates)
+export(get_event_rets)
 export(get_trading_dates)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
