--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(get_annc_dates)
 export(get_event_cum_rets)
 export(get_event_dates)
 export(get_event_rets)
+export(get_got_data)
 export(get_trading_dates)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(tibble,tibble)
