--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: farr
 Title: Data and Code for Financial Accounting Research
-Version: 0.2.4
+Version: 0.2.5
 Authors@R: 
     person(given = "Ian",
            family = "Gow",
@@ -19,4 +19,6 @@ Imports:
     magrittr,
     rlang,
     tidyr,
-    tibble
+    tibble,
+    readr,
+    stringr
