--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_annc_dates)
 export(get_event_cum_rets)
 export(get_event_dates)
 export(get_event_rets)
+export(get_ff_ind)
 export(get_got_data)
 export(get_trading_dates)
 importFrom(magrittr,"%>%")
