--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: farr
 Title: Data and Code for Financial Accounting Research
-Version: 0.2.6
+Version: 0.2.7
 Authors@R: 
     person(given = "Ian",
            family = "Gow",
@@ -24,3 +24,5 @@ Imports:
     stringr,
     DBI,
     purrr
+Depends: 
+    R (>= 2.10)
