--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_event_dates)
 export(get_event_rets)
 export(get_ff_ind)
 export(get_got_data)
+export(get_idd_periods)
 export(get_trading_dates)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
