Added monthly returns code.
- Also fixed existing returns code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(df_to_pg)
 export(get_annc_dates)
 export(get_event_cum_rets)
+export(get_event_cum_rets_mth)
 export(get_event_dates)
 export(get_event_rets)
 export(get_ff_ind)
