Added winsorize and truncate functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(get_got_data)
 export(get_idd_periods)
 export(get_test_scores)
 export(get_trading_dates)
+export(truncate)
+export(winsorize)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(tibble,tibble)
