Added get_me_breakpoints function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_event_rets)
 export(get_ff_ind)
 export(get_got_data)
 export(get_idd_periods)
+export(get_me_breakpoints)
 export(get_size_rets_monthly)
 export(get_test_scores)
 export(get_trading_dates)
