--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: farr
 Title: Data and Code for Financial Accounting Research
-Version: 0.2.23
+Version: 0.2.25
 Authors@R: 
     person(given = "Ian",
            family = "Gow",
@@ -12,9 +12,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Imports: 
-    dbplyr,
+    dbplyr (>= 2.2.0),
     dplyr,
     magrittr,
     rlang,
@@ -23,7 +23,6 @@ Imports:
     readr,
     stringr,
     DBI,
-    lubridate,
-    purrr
+    lubridate
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5.0)
