--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "iandgow@gmail.com",
            comment = c(ORCID = "0000-0002-6243-8409"))
 Description: Provides handy functions and data to support a course book for accounting research.
-   Gow, Ian and Tongqing Ding (2022) "Accounting Research: An Introductory Course" <https://iangow.github.io/far_book>.
+   Gow, Ian and Tongqing Ding (2022) "Accounting Research: An Introductory Course" <https://iangow.github.io/far_book/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -31,6 +31,8 @@ Suggests:
     RPostgres,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    spelling
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+Language: en-US
