Incremented version number.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: farr
 Title: Data and Code for Financial Accounting Research
-Version: 0.2.28
+Version: 0.2.29
 Authors@R: 
     person(given = "Ian",
            family = "Gow",
@@ -24,7 +24,8 @@ Imports:
     readr,
     stringr,
     DBI,
-    lubridate
+    lubridate,
+    rpart
 Depends: 
     R (>= 3.5.0)
 Suggests: 
