Added performance-metric functions to package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(predict,rusboost)
 export("%>%")
+export(auc)
+export(confusion_stats)
 export(form_deciles)
 export(get_annc_dates)
 export(get_event_cum_rets)
@@ -15,6 +17,8 @@ export(get_me_breakpoints)
 export(get_size_rets_monthly)
 export(get_test_scores)
 export(get_trading_dates)
+export(ndcg)
+export(roc)
 export(rusboost)
 export(truncate)
 export(winsorize)
