--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: farr
 Title: Data and Code for Financial Accounting Research
-Version: 0.2.31
+Version: 0.2.32
 Authors@R: 
     person(given = "Ian",
            family = "Gow",
            role = c("aut", "cre"),
            email = "iandgow@gmail.com",
            comment = c(ORCID = "0000-0002-6243-8409"))
-Description: Provides handy functions and data to support a course book for accounting research.
-   Gow, Ian and Tongqing Ding (2022) "Accounting Research: An Introductory Course" <https://iangow.github.io/far_book/>.
+Description: Handy functions and data to support a course book for accounting research. 
+    Gow, Ian and Tongqing Ding (2022) 'Accounting Research: An Introductory Course' <https://iangow.github.io/far_book/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+BugReports: https://github.com/iangow/farr/issues
 Imports: 
     dbplyr (>= 2.2.0),
     dplyr,
