Added parquet-related functions to farr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(get_me_breakpoints)
 export(get_size_rets_monthly)
 export(get_test_scores)
 export(get_trading_dates)
+export(load_parquet)
 export(ndcg)
+export(pg_to_parquet)
 export(roc)
 export(rusboost)
 export(truncate)
