--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(ndcg)
 export(pg_to_parquet)
 export(roc)
 export(rusboost)
+export(system_time)
 export(truncate)
 export(winsorize)
 importFrom(magrittr,"%>%")
