--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "iandgow@gmail.com",
            comment = c(ORCID = "0000-0002-6243-8409"))
 Description: Handy functions and data to support a course book for accounting research. 
-    Gow, Ian and Tongqing Ding (2022) 'Accounting Research: An Introductory Course' <https://iangow.github.io/far_book/>.
+    Gow, Ian D. and Tongqing Ding (2024) 'Empirical Research in Accounting: Tools and Methods' <https://iangow.github.io/far_book/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
