--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,14 +7,13 @@ Authors@R:
            role = c("aut", "cre"),
            email = "iandgow@gmail.com",
            comment = c(ORCID = "0000-0002-6243-8409"))
-Description: Handy functions and data to support a course book for accounting research. 
-    Gow, Ian and Tongqing Ding (2024) 'Empirical Research in Accounting: Tools and Methods' (1st ed.). Chapman and Hall/CRC. <https://doi.org/10.1201/9781003456230> and <https://iangow.github.io/far_book>.
+Description: Handy functions and data to support the course book. Gow, Ian and Tongqing Ding (2024) 'Empirical Research in Accounting: Tools and Methods' (1st ed.). Chapman and Hall/CRC. <https://doi.org/10.1201/9781003456230> and <https://iangow.github.io/far_book>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 BugReports: https://github.com/iangow/farr/issues
 Imports: 
     dbplyr (>= 2.2.0),
